test/good/39.zls
let hybrid model0 (z) = y where
  rec init y = 0

let hybrid model (z) = y1 where
  rec
      automaton
      | S1 ->
          do
              der y1 = 1.0
          done
  and init y1 = 0.0

let hybrid model1 (z) = y where
  rec init y = 0.0
  and match z with
      | true -> do der y = 1.0 done
      | false -> do der y = 2.0 done

